Añadiendo loading y configurando entrada en video actual

--- a/styles/style.css
+++ b/styles/style.css
@@ -151,6 +151,19 @@ a {
     width: 530px;
     height: 401.5px;
 }
+.fixed-center {
+    display: flex;
+    background-color: rgba(255, 0, 0, 0.753);
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    color: white;
+    font-size: 1.5em;
+    justify-content: center;
+    align-items: center;
+}
 .invisible {
     display: none;
 }
