--- a/styles/style.css
+++ b/styles/style.css
@@ -95,6 +95,7 @@ a {
 .content {
     display: flex;
     width: calc(100vw - var(--size-list));
+    height: auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -134,6 +135,24 @@ a {
     align-items: center;
     height: auto;
 }
+#skip {
+    position: absolute;
+    right: 30px;
+    bottom: 20%;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(184 197 220 / 90%);
+    font-size: 1em;
+    user-select: none;
+}
+#skip:hover {
+    background-color: rgb(185 197 220 / 70%);
+}
+#skip:focus {
+    outline: none;
+}
 .button {
     margin: 0 20px;
     background-color: transparent;
@@ -146,14 +165,17 @@ a {
 .button:hover {
     background-color: rgba(255, 0, 0, 0.473);
 }
-#video {
-    max-width: 530px;
-    width: 100%;
-    height: auto;
-}
 .contenedor-video {
-    width: 530px;
-    height: 401.5px;
+    /* width: 530px; */
+    position: relative;
+    width: calc(100vw - var(--size-list) - 400px);
+    height: calc(100vw/3);
+}
+#video {
+    /* max-width: 530px; */
+    max-width: calc(100vw - var(--size-list) - 400px);
+    width: 100%;
+    height: calc(100vw/3);
 }
 .fixed-center {
     display: flex;
