--- a/styles/style.css
+++ b/styles/style.css
@@ -268,6 +268,9 @@ a {
     .video-z {
         z-index: -1;
     }
+    .skip-z {
+        z-index: -2;
+    }
     .mostrar-lista-resp {
         /* display: fixed; */
         position: fixed;
