--- a/styles/ingreso.css
+++ b/styles/ingreso.css
@@ -12,7 +12,7 @@ body {
     background-image: radial-gradient(circle at 118.3% 68.3%, #008f63 0, #009074 3.33%, #009084 6.67%, #009094 10%, #0090a4 13.33%, #0090b3 16.67%, #008fc0 20%, #008ecd 23.33%, #008cd7 26.67%, #008ae0 30%, #0087e7 33.33%, #0083eb 36.67%, #007fed 40%, #007aed 43.33%, #0075ea 46.67%, #486ee5 50%, #6d67de 53.33%, #885fd5 56.67%, #9e56ca 60%, #af4dbd 63.33%, #be44af 66.67%, #c93ca1 70%, #d23491 73.33%, #d82f82 76.67%, #db2d72 80%, #dd2e62 83.33%, #dc3353 86.67%, #d93a44 90%, #d44235 93.33%, #ce4b26 96.67%, #c65314 100%);
 }
 .logo {
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     filter: drop-shadow(10px 10px 10px);
 }
 .contenedor-form {
@@ -67,5 +67,8 @@ input:focus {
     }
     input {
         width: 100%;
+    }
+    .logo {
+        margin-bottom: 20px;
     }
 }
