--- a/styles/style.css
+++ b/styles/style.css
@@ -179,7 +179,7 @@ a {
 }
 .fixed-center {
     display: flex;
-    background-color: #008ed5ce;
+    background-color: #465d68;
     position: fixed;
     left: 0;
     right: 0;
@@ -290,6 +290,7 @@ audio {
     }
     audio {
         margin: 20px 10%;
+        z-index: -80;
     }
     .invisible {
         display: none;
